# elasticsearch_test

./: .env  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
app/: cli.py  config.py  logging.py
app/elasticsearch/: session.py  utils.py
docker/elasticsearch/: elastic-stack-test-ca.p12  elasticsearch_data_node_1.yml  elasticsearch_data_node_2.yml  elasticsearch_ingest_node.yml  elasticsearch_master_node.yml
docker/kibana/: kibana.yml
docker/metricbeat/: Dockerfile  metricbeat.yml
docker/metricbeat/modules/: elasticsearch-xpack.yml
